cluster/k8s/grocy/sf/mcp/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: grocy-mcp-sf
  labels:
    name: grocy-mcp-sf
    goldilocks.fairwinds.com/enabled: "false"
